@@ -5,16 +5,28 @@ import geekcode.takatuf.Enums.PaymentMethod;
 import geekcode.takatuf.Exception.Types.ResourceNotFoundException;
 import geekcode.takatuf.Exception.Types.UnauthorizedException;
 import geekcode.takatuf.Repository.*;
+import geekcode.takatuf.Enums.OfferStatus;
 import geekcode.takatuf.Enums.OrderStatus;
 import geekcode.takatuf.Enums.OrderType;
+import geekcode.takatuf.Enums.UserType;
 import geekcode.takatuf.Enums.TrackingInfo;
 import geekcode.takatuf.dto.order.*;
+import geekcode.takatuf.dto.order.OfferDto.BuyerOfferDecisionRequest;
+import geekcode.takatuf.dto.order.OfferDto.OfferResponse;
+import geekcode.takatuf.dto.order.OfferDto.SubmitOfferRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.util.Collections;
+import java.util.stream.Collectors;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -28,66 +40,75 @@ public class OrderService {
 
         private final OrderRepository orderRepository;
         private final StoreRepository storeRepository;
+        private final CustomOrderOfferRepository customOrderOfferRepository;
         private final ProductRepository productRepository;
+        private final CategoryRepository categoryRepository;
         private final OrderItemRepository orderItemRepository;
         private final UserRepository userRepository;
         private final PendingOrderItemRepository pendingOrderItemRepository;
         private final PendingOrderRepository pendingOrderRepository;
 
         @Transactional
-        public OrderResponse placeOrder(Long userId, PlaceOrderRequest request) {
+        public OrderResponse placeCustomOrder(Long userId, PlaceOrderRequest request) {
                 User user = userRepository.findById(userId)
                                 .orElseThrow(() -> new ResourceNotFoundException("User not found: " + userId));
 
-                if (request.getItems() == null || request.getItems().isEmpty()) {
-                        throw new ResourceNotFoundException("Order must contain at least one product");
+                if (user.getType() != UserType.BUYER) {
+                        throw new UnauthorizedException("Only buyers can place custom orders");
                 }
 
-                Map<Long, Product> productMap = request.getItems().stream()
-                                .map(item -> productRepository.findById(item.getProductId())
-                                                .orElseThrow(() -> new ResourceNotFoundException(
-                                                                "Product not found: " + item.getProductId())))
-                                .collect(Collectors.toMap(Product::getId, p -> p));
-
-                List<OrderItem> allOrderItems = new ArrayList<>();
-
-                for (PlaceOrderRequest.OrderItemRequest itemRequest : request.getItems()) {
-                        Product product = productMap.get(itemRequest.getProductId());
-
-                        OrderItem orderItem = OrderItem.builder()
-                                        .product(product)
-                                        .quantity(itemRequest.getQuantity())
-                                        .price(product.getPrice())
-                                        .address(request.getAddress())
-                                        .orderDate(LocalDateTime.now())
-                                        .status(OrderStatus.PLACED)
-                                        .build();
-
-                        allOrderItems.add(orderItem);
+                if (request.getOrderType() != OrderType.CUSTOM) {
+                        throw new RuntimeException("Order type must be CUSTOM for custom orders");
                 }
 
-                BigDecimal totalPrice = allOrderItems.stream()
-                                .map(item -> item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity())))
-                                .reduce(BigDecimal.ZERO, BigDecimal::add);
+                if (request.getBuyerProposedPrice() == null
+                                || request.getBuyerProposedPrice().compareTo(BigDecimal.ZERO) <= 0) {
+                        throw new RuntimeException("Buyer proposed price must be provided and positive");
+                }
 
-                Order order = Order.builder()
+                Category category = null;
+                if (request.getCategoryId() != null) {
+                        category = categoryRepository.findById(request.getCategoryId())
+                                        .orElseThrow(() -> new ResourceNotFoundException(
+                                                        "Category not found: " + request.getCategoryId()));
+                }
+
+                String imagePath = null;
+                MultipartFile imageFile = request.getImageFile();
+                if (imageFile != null && !imageFile.isEmpty()) {
+                        try {
+                                String uploadsDir = "uploads/custom_orders/";
+                                Path uploadPath = Paths.get(uploadsDir);
+                                if (!Files.exists(uploadPath)) {
+                                        Files.createDirectories(uploadPath);
+                                }
+
+                                String originalFilename = imageFile.getOriginalFilename();
+                                String fileName = System.currentTimeMillis() + "_" + originalFilename;
+                                Path filePath = uploadPath.resolve(fileName);
+                                Files.copy(imageFile.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+
+                                imagePath = uploadsDir + fileName;
+                        } catch (Exception e) {
+                                throw new RuntimeException("Failed to store image file", e);
+                        }
+                }
+
+                Order customOrder = Order.builder()
                                 .user(user)
-                                .store(null)
+                                .category(category)
+                                .name(request.getName())
+                                .customizationDetails(request.getCustomizationDetails())
+                                .imageUrl(imagePath)
+                                .buyerProposedPrice(request.getBuyerProposedPrice())
                                 .status(OrderStatus.PLACED)
                                 .trackingInfo(TrackingInfo.PROCESSING)
-                                .totalPrice(totalPrice)
-                                .orderType(OrderType.STANDARD)
+                                .orderType(OrderType.CUSTOM)
                                 .createdAt(LocalDateTime.now())
                                 .updatedAt(LocalDateTime.now())
                                 .build();
 
-                Order savedOrder = orderRepository.save(order);
-
-                allOrderItems.forEach(item -> item.setOrder(savedOrder));
-                orderItemRepository.saveAll(allOrderItems);
-
-                savedOrder.setOrderItems(allOrderItems);
-
+                Order savedOrder = orderRepository.save(customOrder);
                 return mapToOrderResponse(savedOrder);
         }
 
@@ -100,19 +121,95 @@ public class OrderService {
                         throw new UnauthorizedException("Unauthorized to cancel this order");
                 }
 
-                if (order.getStatus() != OrderStatus.PLACED) {
-                        throw new RuntimeException("Only placed orders can be cancelled");
+                // Allow cancel only if not accepted/rejected/cancelled yet
+                if (order.getStatus() == OrderStatus.ACCEPTED
+                                || order.getStatus() == OrderStatus.REJECTED
+                                || order.getStatus() == OrderStatus.CANCELLED) {
+                        throw new RuntimeException("Cannot cancel an order that is already finalized");
                 }
 
                 order.setStatus(OrderStatus.CANCELLED);
                 order.setTrackingInfo(TrackingInfo.CANCELLED_BY_USER);
                 order.setUpdatedAt(LocalDateTime.now());
                 orderRepository.save(order);
+        }
 
-                if (order.getOrderItems() != null) {
-                        order.getOrderItems().forEach(item -> item.setStatus(OrderStatus.CANCELLED));
-                        orderItemRepository.saveAll(order.getOrderItems());
+        @Transactional
+        public void submitOffer(Long sellerId, Long orderId, SubmitOfferRequest request) {
+                User seller = userRepository.findById(sellerId)
+                                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+                Order order = orderRepository.findById(orderId)
+                                .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
+
+                if (seller.getType() != UserType.SELLER)
+                        throw new UnauthorizedException("Only sellers can submit offers");
+
+                CustomOrderOffer offer = CustomOrderOffer.builder()
+                                .order(order)
+                                .seller(seller)
+                                .proposedPrice(request.getProposedPrice())
+                                .additionalInfo(request.getAdditionalInfo())
+                                .status(OfferStatus.ACTIVE)
+                                .createdAt(LocalDateTime.now())
+                                .updatedAt(LocalDateTime.now())
+                                .build();
+
+                customOrderOfferRepository.save(offer);
+        }
+
+        public List<OfferResponse> getOffersForOrder(Long buyerId, Long orderId) {
+                Order order = orderRepository.findById(orderId)
+                                .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
+
+                if (!order.getUser().getId().equals(buyerId))
+                        throw new UnauthorizedException("Unauthorized to view offers");
+
+                return customOrderOfferRepository.findByOrderId(orderId).stream()
+                                .map(offer -> {
+                                        OfferResponse resp = new OfferResponse();
+                                        resp.setOfferId(offer.getId());
+                                        resp.setSellerId(offer.getSeller().getId());
+                                        resp.setSellerName(offer.getSeller().getName());
+                                        resp.setProposedPrice(offer.getProposedPrice());
+                                        resp.setAdditionalInfo(offer.getAdditionalInfo());
+                                        resp.setStatus(offer.getStatus());
+                                        return resp;
+                                }).toList();
+        }
+
+        @Transactional
+        public void respondToOffer(Long buyerId, Long offerId, BuyerOfferDecisionRequest request) {
+                CustomOrderOffer offer = customOrderOfferRepository.findById(offerId)
+                                .orElseThrow(() -> new ResourceNotFoundException("Offer not found"));
+
+                Order order = offer.getOrder();
+
+                if (!order.getUser().getId().equals(buyerId))
+                        throw new UnauthorizedException("Unauthorized to respond to this offer");
+
+                if (order.getStatus() == OrderStatus.ACCEPTED || order.getStatus() == OrderStatus.REJECTED)
+                        throw new RuntimeException("Order already finalized");
+
+                if (request.isAccept()) {
+                        if (order.getBuyerProposedPrice().compareTo(offer.getProposedPrice()) != 0) {
+                                order.setBuyerProposedPrice(offer.getProposedPrice());
+                        }
+
+                        order.setStatus(OrderStatus.ACCEPTED);
+                        order.setTrackingInfo(TrackingInfo.ACCEPTED_BY_BUYER);
+                        order.setProposedPrice(offer.getProposedPrice());
+                        offer.setStatus(OfferStatus.ACTIVE);
+
+                } else {
+                        offer.setStatus(OfferStatus.REJECTED);
+                        order.setTrackingInfo(TrackingInfo.REJECTED_BY_BUYER);
                 }
+
+                offer.setUpdatedAt(LocalDateTime.now());
+                order.setUpdatedAt(LocalDateTime.now());
+                customOrderOfferRepository.save(offer);
+                orderRepository.save(order);
         }
 
         public OrderResponse trackOrder(Long orderId) {
@@ -132,97 +229,35 @@ public class OrderService {
                 return mapToOrderResponse(order);
         }
 
-        @Transactional
-        public OrderResponse placeCustomOrder(Long userId, PlaceOrderRequest request) 
-        {
-                if (request.getOrderType() != OrderType.CUSTOM) {
-                        throw new RuntimeException("Order type must be CUSTOM for custom orders");
-                }
-
-                User user = userRepository.findById(userId)
-                                .orElseThrow(() -> new ResourceNotFoundException("User not found: " + userId));
-
-                Order customOrder = Order.builder()
-                                .user(user)
-                                .category(request.getCategory())
-                                .customizationDetails(request.getCustomizationDetails())
-                                .status(OrderStatus.PLACED)
-                                .trackingInfo(TrackingInfo.PROCESSING)
-                                .orderType(OrderType.CUSTOM)
-                                .createdAt(LocalDateTime.now())
-                                .updatedAt(LocalDateTime.now())
-                                .build();
-
-                Order savedOrder = orderRepository.save(customOrder);
-                return mapToOrderResponse(savedOrder);
-        }
-
-        @Transactional
-        public OrderResponse decideCustomOrder(Long sellerId, Long orderId, CustomOrderDecisionRequest request) {
-                Order order = orderRepository.findById(orderId)
-                                .orElseThrow(() -> new ResourceNotFoundException("Custom Order not found: " + orderId));
-
-                if (order.getOrderType() != OrderType.CUSTOM) {
-                        throw new RuntimeException("Not a custom order");
-                }
-
-                Store store = order.getStore();
-                if (!store.getOwner().getId().equals(sellerId)) {
-                        throw new UnauthorizedException("Unauthorized to decide on this custom order");
-                }
-
-                if (order.getStatus() != OrderStatus.PLACED) {
-                        throw new RuntimeException("Custom order already processed");
-                }
-
-                if (Boolean.TRUE.equals(request.getAccept())) {
-                        if (request.getProposedPrice() == null
-                                        || request.getProposedPrice().compareTo(BigDecimal.ZERO) <= 0) {
-                                throw new RuntimeException(
-                                                "Proposed price must be provided and positive when accepting the order");
-                        }
-
-                        order.setStatus(OrderStatus.ACCEPTED);
-                        order.setTrackingInfo(TrackingInfo.ACCEPTED_BY_STORE);
-                        order.setProposedPrice(request.getProposedPrice());
-                } else {
-                        order.setStatus(OrderStatus.REJECTED);
-                        order.setTrackingInfo(TrackingInfo.REJECTED_BY_STORE);
-                }
-
-                order.setUpdatedAt(LocalDateTime.now());
-                orderRepository.save(order);
-
-                return mapToOrderResponse(order);
-        }
-
         private OrderResponse mapToOrderResponse(Order order) {
+                List<OrderItem> items = orderItemRepository.findByOrder_Id(order.getId());
+
                 return OrderResponse.builder()
                                 .orderId(order.getId())
+                                .name(order.getName())
                                 .status(order.getStatus())
                                 .trackingInfo(order.getTrackingInfo())
-                                .totalPrice(order.getOrderType() == OrderType.CUSTOM ? order.getProposedPrice()
-                                                : order.getTotalPrice())
-                                .paymentMethod(order.getPaymentMethod())
+                                .totalPrice(order.getTotalPrice())
                                 .orderType(order.getOrderType())
                                 .createdAt(order.getCreatedAt())
                                 .updatedAt(order.getUpdatedAt())
-                                .category(order.getOrderType() == OrderType.CUSTOM ? order.getCategory() : null)
-                                .customizationDetails(order.getOrderType() == OrderType.CUSTOM
-                                                ? order.getCustomizationDetails()
-                                                : null)
-                                .proposedPrice(order.getOrderType() == OrderType.CUSTOM ? order.getProposedPrice()
-                                                : null)
-                                .items(order.getOrderItems() == null ? List.of()
-                                                : order.getOrderItems().stream()
-                                                                .map(item -> OrderResponse.OrderItemResponse.builder()
-                                                                                .productId(item.getProduct().getId())
-                                                                                .productName(item.getProduct()
-                                                                                                .getName())
-                                                                                .quantity(item.getQuantity())
-                                                                                .price(item.getPrice())
-                                                                                .build())
-                                                                .collect(Collectors.toList()))
+                                .items(items != null ? items.stream().map(this::mapToOrderItemDto)
+                                                .collect(Collectors.toList()) : Collections.emptyList())
+                                .customizationDetails(order.getCustomizationDetails())
+                                .imageUrl(order.getImageUrl())
+                                .buyerProposedPrice(order.getBuyerProposedPrice())
+                                .proposedPrice(order.getProposedPrice())
+                                .categoryId(order.getCategory() != null ? order.getCategory().getId() : null)
+                                .categoryName(order.getCategory() != null ? order.getCategory().getName() : null)
+                                .build();
+        }
+
+        private OrderResponse.OrderItemResponse mapToOrderItemDto(OrderItem orderItem) {
+                return OrderResponse.OrderItemResponse.builder()
+                                .productId(orderItem.getProduct().getId())
+                                .productName(orderItem.getProduct().getName())
+                                .quantity(orderItem.getQuantity())
+                                .price(orderItem.getPrice())
                                 .build();
         }
 
@@ -279,7 +314,7 @@ public class OrderService {
 
         public PendingOrderResponse getPendingOrder(Long userId) {
                 PendingOrder order = pendingOrderRepository.findByUserIdAndStatus(userId, OrderStatus.PENDING)
-                        .orElseThrow(() -> new ResourceNotFoundException("No pending order found"));
+                                .orElseThrow(() -> new ResourceNotFoundException("No pending order found"));
 
                 List<PendingOrderItem> items = pendingOrderItemRepository.findByPendingOrder(order);
 
@@ -288,7 +323,8 @@ public class OrderService {
                 List<PendingOrderItemResponse> itemResponses = new ArrayList<>();
                 for (PendingOrderItem item : items) {
                         Product product = productRepository.findById(item.getProduct().getId())
-                                .orElseThrow(() -> new ResourceNotFoundException("Product not found: " + item.getProduct().getId()));
+                                        .orElseThrow(() -> new ResourceNotFoundException(
+                                                        "Product not found: " + item.getProduct().getId()));
                         BigDecimal currentPrice = product.getPrice();
                         BigDecimal itemTotal = currentPrice.multiply(BigDecimal.valueOf(item.getQuantity()));
 
@@ -296,11 +332,10 @@ public class OrderService {
                         total = total.add(itemTotal);
 
                         itemResponses.add(new PendingOrderItemResponse(
-                                product.getId(),
-                                product.getName(),
-                                currentPrice,
-                                item.getQuantity()
-                        ));
+                                        product.getId(),
+                                        product.getName(),
+                                        currentPrice,
+                                        item.getQuantity()));
                 }
 
                 order.setTotalPrice(total);
@@ -309,8 +344,6 @@ public class OrderService {
 
                 return new PendingOrderResponse(order.getId(), total, itemResponses);
         }
-
-
 
         @Transactional
         public Long updatePendingOrderAddress(Long userId, Long pendingOrderId, AddressRequest addressRequest) {
